add auth redux-thunk

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,3 +17,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header {
+  height: 45px;
+  background: pink;
+}
