--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,4 +1,8 @@
 $greyDark: #1f1f1f;
 $greyDefault: #282828;
 $greyLessDark: #363636;
+$grey: #8c8c8c;
 $greyLight: #e3e3e3;
+$red: #de4c4a;
+$blue: #235cb3;
+$skyBlue: #e8f0fe;
