--- a/src/scss/components/_auth.scss
+++ b/src/scss/components/_auth.scss
@@ -3,22 +3,36 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 .sign-content {
+    width: 250px;
     &__form {
         display: flex;
         flex-direction: column;
-        max-width: 400px;
         h2 {
             text-align: center;
+            color: $greyDark;
+            text-transform: uppercase;
+            font-size: 20px;
+            font-weight: 700;
         }
         label {
-            margin: 20px 0 10px;
+            cursor: pointer;
+            width: max-content;
+            margin: 10px 0;
+            color: $greyDark;
         }
         input {
             height: 30px;
             padding: 0 10px;
+            color: $greyDark;
+            border: 1px solid $greyDark;
+            &:-webkit-autofill,
+            &:-webkit-autofill:hover,
+            &:-webkit-autofill:focus,
+            &:-webkit-autofill:active  {
+                -webkit-box-shadow: 0 0 0 30px white inset !important;
+            }
         }
         button[type='submit'] {
             margin: 20px 0;
@@ -26,15 +40,39 @@
             cursor: pointer;
             background: transparent;
             border: 1px solid black;
+            color: $greyDark;
+            background: $skyBlue;
+            text-transform: uppercase;
+            font-weight: 700;
         }
+    }
+    &__error {
+        color: $red;
+        margin-top: 5px;
+        font-size: 14px;
     }
     &__already {
         text-align: center;
+        color: $greyDefault;
+        a {
+            color: $blue;
+        }
+    }
+    &__forgot-password {
+        color: $greyDefault;
+        display: block;
+        width: max-content;
+        margin: 0 auto 10px;
+    }
+    &__success-message {
+        margin-top: 5px;
+        font-size: 14px;
+        color: $blue;
     }
 }
 
 .birthday-container {
-    margin-top: 20px;
+    margin: 20px 0 10px;
     position: relative;
     li {
         display: flex;
@@ -42,6 +80,7 @@
         align-items: center;
         height: 30px;
         background: lightblue;
+        color: $greyDefault;
         cursor: pointer;
         transition: background .1s ease-in;
         &:hover {
@@ -50,6 +89,7 @@
     }
     p {
         margin-bottom: 10px;
+        color: $greyDefault;
     }
     &__btns {
         display: flex;
@@ -58,6 +98,8 @@
     button {
         height: 30px;
         cursor: pointer;
+        color: $greyDefault;
+        background: $greyLight;
     }
     &__day, &__year {
         width: 22%;
@@ -72,6 +114,19 @@
         top: 65px;
         width: 100%;
         display: flex;
+    }
+    &__modal-day-ul,
+    &__modal-month-ul,
+    &__modal-years-ul {
+        scrollbar-color: $greyLessDark $greyLight;
+        scrollbar-width: thin;
+        &::-webkit-scrollbar {
+            width: 5px;
+            background: $greyLight;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: $greyLessDark;
+        }
     }
     &__modal-day-ul {
         width: 22%;
