--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,13 +12,12 @@ body {
   min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 ul {
   list-style-type: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 @import 'variables/_colors';
@@ -26,3 +25,4 @@ ul {
 @import 'components/_auth';
 @import 'components/_header';
 @import 'components/_menu';
+@import 'components/_profile-settings';
