--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,5 @@
+@import 'variables/_colors';
+
 * {
   margin: 0;
   padding: 0;
@@ -20,9 +22,14 @@ a {
   text-decoration: none;
 }
 
-@import 'variables/_colors';
+.content-wrap {
+  min-height: calc(100vh - 45px);
+  background: $greyDark;
+  padding: 2vw 4vw;
+}
 
 @import 'components/_auth';
 @import 'components/_header';
 @import 'components/_menu';
 @import 'components/_profile-settings';
+@import 'components/_nav-goals-types';
