remove header nav

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -33,3 +33,4 @@ a {
 @import 'components/_menu';
 @import 'components/_profile-settings';
 @import 'components/_nav-goals-types';
+@import 'components/_life-goals';
