--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -3,6 +3,7 @@ $greyDefault: #282828;
 $greyLessDark: #363636;
 $grey: #8c8c8c;
 $greyLight: #e3e3e3;
+$redDark: #502e2e;
 $red: #de4c4a;
 $blue: #235cb3;
 $skyBlue: #e8f0fe;
