--- a/src/scss/components/_life-goals.scss
+++ b/src/scss/components/_life-goals.scss
@@ -11,5 +11,8 @@
         background: $greyLessDark;
         cursor: pointer;
         border-radius: 4px;
+        &_last {
+            background: $redDark;
+        }
     }
 }
