add years & months

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -32,5 +32,4 @@ a {
 @import 'components/_header';
 @import 'components/_menu';
 @import 'components/_profile-settings';
-@import 'components/_nav-goals-types';
-@import 'components/_life-goals';
+@import 'components/dashboard';
